--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,14 @@
-//
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
+//Toastr
+@import '~toastr/toastr';
+
+//swal
+@import '~sweetalert2/src/sweetalert2.scss';
