--- a/resources/client/css/style.css
+++ b/resources/client/css/style.css
@@ -8082,7 +8082,7 @@ h6 {
 /* line 28, /Applications/MAMP/htdocs/palash/cl/august 2019/202. Shop/202 shop html/sass/_footer.scss */
 .footer_part .single_footer_part span {
   color: #2f7dfc;
-  text-transform: capitalize;
+  text-transform: none;
 }
 
 /* line 32, /Applications/MAMP/htdocs/palash/cl/august 2019/202. Shop/202 shop html/sass/_footer.scss */
